V1.1 Fix whitespace and add CSS

--- a/5. Restaurant App/css/styles.css
+++ b/5. Restaurant App/css/styles.css
@@ -77,7 +77,7 @@ section {
 #footer {
   background-color: #174375;
   color: rgb(204, 204, 204);
-  font-size: 4pt;
+  font-size: 14pt;
   letter-spacing: 1px;
   padding: 2px;
   text-align: center;
@@ -222,7 +222,7 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  min-width: 270px;
+  min-width: 250px;
   max-width: 300px;
 }
 
@@ -403,7 +403,15 @@ nav h1 a {
 
 @media only screen and (max-width: 749px) {
   #restaurants-list li {
-    max-width: 100%;
+    min-width: 250px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  #restaurants-list{
+    padding :10px 15px 10px;
+  }
+  #restaurants-list .restaurant-img{
+    min-height: 20-0px;
   }
 
   .inside {
@@ -443,7 +451,7 @@ nav h1 a {
 
   .inside #restaurant-container {
     position: relative;
-    width: 100vw;
+    width: 80%;
     padding: 140px 5px 0 0;
     margin: auto;
     text-align: center;
@@ -462,12 +470,38 @@ nav h1 a {
     padding-top: 10px;
   }
 
+  .filter-options{
+    height: 100%
+  }
+
   #reviews-list {
     width: 100vw;
+    margin-bottom: 30%;
+  }
+
+  #reviews-list li{
+    padding-right: 0px;
+    width: auto ;
+  }
+  .inside #reviews-container{
+    padding: 0px;
   }
 
   #reviews-container h2 {
     text-align: center;
+  }
+
+  #restaurant-name {
+    margin: 0em;
+    font-size: 1.5em;
+  }
+  #restaurant-cuisine {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #restaurant-img {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -475,6 +509,8 @@ nav h1 a {
   #restaurants-list li {
     max-width: 45%;
   }
+
+
 }
 
 @media only screen and (min-width: 1000px) {
